@@ -1,1 +1,2 @@
+#!/bin/sh
 gcc -I../../dyncall/dyncall shell.c ../../dyncall/dyncall/libdyncall_s.a ../../dyncall/dynload/libdynload_s.a
