@@ -1,3 +1,4 @@
+/* auto-generated by gen-masm.sh */
 .CODE
 
 dcCall_x64_sysv PROC
